@@ -5,6 +5,9 @@ changes relative to sbcl-1.3.12:
     (lp#1645152)
   * enhancement: new Windows specific option to run-program, :escape-arguments
     (lp#1503496)
+  * enhancement: recompiling a MAKE-INSTANCE form with an initarg :INITARG
+    CONSTANT where CONSTANT names a constant variable picks up the new value
+    of CONSTANT in case it has been redefined. (lp#1644944)
   * optimization: faster TYPEP on undefined at compile-time types and upcoming
     class definitions. (lp#1082967)
   * bug fix: get-timezone returns corret DST on 64-bit Windows. (lp#1641058)
